# austwin-website

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  environment.yml  index.html  package-lock.json  package.json  render.yaml  vercel.json
.claude/: settings.local.json
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  index.css
apps/web/src/components/: AddressSearch.tsx  AnomalyMap.tsx  AnomalySummary.tsx  CityGuideWidget.module.css  (+16 more)
data/processed/: asos_hourly.csv  ercot_load.json  openmeteo_austin.json  tract_morphology.csv  tracts.geojson  usgs_austin_gauges.json
scripts/: check-api-ports.sh  ports.sh  run-conda.sh  setup-conda.sh  start-api.sh  stop-dev.sh
services/cityforesight/: Dockerfile  pyproject.toml
services/cityforesight/app/: config.py  main.py
services/cityforesight/app/api/: routes.py
services/cityforesight/app/data/: asos.py  census.py  ercot.py  geocode.py  hazard_proxies.py  lookup.py  modis.py  nlcd.py  openmeteo.py  tracts.py  usgs_gauges.py
services/cityforesight/app/inference/: predictor.py  scheduler.py
services/cityforesight/app/models/: lstm.py
services/cityforesight/artifacts/: baseline_meta.json  benchmark.json  kil_lstm.pt  kil_meta.json
services/cityforesight/scripts/: fetch_data.py
services/cityforesight/tests/: test_tract_lookup.py
services/cityforesight/training/: dataset.py  evaluate.py  train_baseline.py  train_kil.py
services/cityguide/: pyproject.toml
services/cityguide/app/: config.py  main.py
services/cityguide/app/agent/: loop.py  tools.py
services/cityguide/app/api/: routes.py
services/cityguide/app/clients/: climate.py  systemdata.py
services/cityguide/app/knowledge/: metrics.md  models.md  protocols.md  system.md
services/cityguide/app/llm/: engine.py
services/cityguide/app/rag/: store.py
services/thermalscape/: README.md  pyproject.toml
services/thermalscape/app/: config.py  main.py
services/thermalscape/app/api/: routes.py
services/thermalscape/app/data/: utci_raster.py
services/thermalscape/artifacts/: utci.json
services/thermalscape/scripts/: build_tile.py
services/thermalscape/work/processed_inputs/Building_DSM/: Building_DSM_0_0.tif
services/thermalscape/work/processed_inputs/DEM/: DEM_0_0.tif
services/thermalscape/work/processed_inputs/aspect/: aspect_0_0.tif
services/thermalscape/work/processed_inputs/metfiles/: metfile_0_0.txt
services/thermalscape/work/processed_inputs/walls/: walls_0_0.tif
services/urbansense/: Dockerfile  pyproject.toml
services/urbansense/app/: config.py  main.py
services/urbansense/app/api/: routes.py
services/urbansense/app/clients/: cityforesight.py
services/urbansense/app/data/: asos.py  tracts.py
services/urbansense/app/detection/: baselines.py  engine.py
services/urbansense/app/inference/: detector.py  scheduler.py
services/urbansense/app/ontology/: export.py  model.py
services/urbansense/scripts/: build_ontology.py  evaluate_anomalies.py
src/: App.tsx  index.css
src/pages/: OnePager.module.css  OnePager.tsx  Thermalscape.tsx
(+16 files in other folders)
