[project]
name = "cityforesight"
version = "0.1.0"
description = "AusTwin CityForesight — LSTM heat index forecasting with KIL morphology features"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "torch>=2.5.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0,<2.1.0",
    "requests>=2.32.0",
    "scikit-learn>=1.5.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "apscheduler>=3.10.0",
    "python-multipart>=0.0.12",
    "geopandas>=1.0.0",
    "rasterio>=1.4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.27.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "training", "scripts"]
