[project]
name = "cityguide"
version = "0.1.0"
description = "AusTwin CityGuide — operator Q&A copilot (local open-source LLM + RAG, grounded on live system data)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0,<2.1.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sentence-transformers>=3.0.0",
    "huggingface-hub>=0.24.0",
    "llama-cpp-python>=0.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
