[project]
name = "thermalscape"
version = "0.1.0"
description = "AusTwin Thermalscape — street-level UTCI thermal comfort (SOLWEIG-GPU) overlay for the twin"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "requests>=2.32.0",
    "numpy>=1.26.0,<2.1.0",
    "rasterio>=1.4.0",
    "shapely>=2.0.0",
    "pyproj>=3.6.0",
    "pillow>=10.0.0",
    "solweig-gpu>=1.2.0",
    # NOTE: solweig-gpu needs GDAL Python bindings (osgeo); install via conda-forge:
    #   conda install -n austwin -c conda-forge gdal
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
